Style sheet added in both files

--- a/contact.html
+++ b/contact.html
@@ -8,25 +8,23 @@
 p{
 
     font-size: 10px;
+    color: red;
 }
 
 </style>
+
 </head>
 
 <body>
 
-    
-
     <div id="header" style="position: absolute; top: 0; left: 0; width: 100%; ">
-<h1>Selectors</h1>
-<h2>In CSS</h2>
-<p>Welcome to my website!</p>
-    </div>
+<h1>Contact Us</h1>
+     </div>
 
-    <p>Elo mordencje</p>
-    <p>Elo mordencje</p>
-    <p>Elo mordencje</p>
-    <p>Elo mordencje</p>
+     <p>Elo mordencje</p>
+     <p>Elo mordencje</p>
+     <p>Elo mordencje</p>
+     <p>Elo mordencje</p>
 
 </body>
 
