--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
 <title>CSS Fore Beginners</title>
 
-<style>
-
-p{
-
-    font-size: 10px;
-}
-
-</style>
 </head>
 
 <body>
 
+    <p class="welcome" style="font-size: 10px; color: red;">Welcome!</p>
     
 
     <div id="header" style="position: absolute; top: 0; left: 0; width: 100%; ">
