--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,14 @@
 <!doctype html>
 
 <head>
-<title>CSS Fore Beginners</title>
-
-<style>
-
-p{
-
-    font-size: 10px;
-    color: red;
-}
-
-</style>
+<title>CSS For Beginners</title>
+<link rel="stylesheet" type="text/css" href="css/syntax.css">
 
 </head>
 
 <body>
 
-    <div id="header" style="position: absolute; top: 0; left: 0; width: 100%; ">
+    <div id="header">
 <h1>Contact Us</h1>
      </div>
 
