--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 
 <head>
-<title>CSS Fore Beginners</title>
-
+<title>CSS For Beginners</title>
+<link rel="stylesheet" type="text/css" href="css/syntax.css">
 </head>
 
 <body>
 
-    <p class="welcome" style="font-size: 10px; color: red;">Welcome!</p>
+    <p class="welcome">Welcome!</p>
     
 
-    <div id="header" style="position: absolute; top: 0; left: 0; width: 100%; ">
+    <div id="header">
 <h1>Selectors</h1>
 <h2>In CSS</h2>
 <p>Welcome to my website!</p>
