Targeting elements with CSS

--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,14 @@
 <h1>Contact Us</h1>
      </div>
 
-     <p>Elo mordencje</p>
-     <p>Elo mordencje</p>
-     <p>Elo mordencje</p>
-     <p>Elo mordencje</p>
+     <p>Yo mordencje ! Contact us below.</p>
+     <p>Aren't paragraph's cool?</p>
 
-</body>
+     <a href="http://www/google.com">Google</a>
+
+     <span>Yo,I'm a span tag</span>
+    
+
+</bo
 
 </html>
