--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,23 @@
 
     <div id="header">
 <h1>Contact Us</h1>
+<h2>Contact the KSI page</h2>
      </div>
 
-     <p>Yo mordencje ! Contact us below.</p>
+     <h2 id="content-header">Content</h2>
+
+
+     <p> Yo mordencje ! Contact us below.</p>
      <p>Aren't paragraph's cool?</p>
 
      <a href="http://www/google.com">Google</a>
 
      <span>Yo,I'm a span tag</span>
     
+     <span class="deck"> Yoo, I'm a span tag too</span>
+     <span class="deck"> This is a deck of spans</span>
+     <span class="deck"> I like span decks</span>
 
-</bo
+    </body>
 
 </html>
