--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,12 @@
 <title>CSS For Beginners</title>
 <link rel="stylesheet" type="text/css" href="css/syntax.css">
 
+<style>
+span{
+    color: purple
+}
+</style>
+
 </head>
 
 <body>
@@ -21,7 +27,7 @@
 
      <a href="http://www/google.com">Google</a>
 
-     <span>Yo,I'm a span tag</span>
+     <span style="color: green;">Yo,I'm a span tag</span>
     
      <span class="deck"> Yoo, I'm a span tag too</span>
      <span class="deck"> This is a deck of spans</span>
