--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,6 @@
 <title>CSS For Beginners</title>
 <link rel="stylesheet" type="text/css" href="css/syntax.css">
 
-<style>
-span{
-    color: purple
-}
-</style>
-
 </head>
 
 <body>
@@ -21,17 +15,19 @@ span{
 
      <h2 id="content-header">Content</h2>
 
-
+<div>
      <p> Yo mordencje ! Contact us below.</p>
      <p>Aren't paragraph's cool?</p>
-
+</div>
      <a href="http://www/google.com">Google</a>
 
-     <span style="color: green;">Yo,I'm a span tag</span>
+     <span>Yo,I'm a span tag</span>
     
      <span class="deck"> Yoo, I'm a span tag too</span>
      <span class="deck"> This is a deck of spans</span>
      <span class="deck"> I like span decks</span>
+
+    <a href="#">I'm a spanner</a>
 
     </body>
 
