--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,12 @@
 
      <h2 id="content-header">Content</h2>
 
-<div>
-     <p> Yo mordencje ! Contact us below.</p>
-     <p>Aren't paragraph's cool?</p>
+<div id="main-content">
+     <p> Yo mordencje ! <strong>Contact</strong> us below.</p>
+     <p class="test">Aren't paragraph's cool?</p>
 </div>
+
+<p>Aren't paragraph's cool?</p>
      <a href="http://www/google.com">Google</a>
 
      <span>Yo,I'm a span tag</span>
