The Important Declaration

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 <div id="main-content">
      <p> Yo mordencje ! <strong>Contact</strong> us below.</p>
-     <p class="test">Aren't paragraph's cool?</p>
+     <p>Aren't paragraph's cool?</p>
 </div>
 
 <p>Aren't paragraph's cool?</p>
