--- a/contact.html
+++ b/contact.html
@@ -21,15 +21,20 @@
 </div>
 
 <p>Aren't paragraph's cool?</p>
+
      <a href="http://www/google.com">Google</a>
 
      <span>Yo,I'm a span tag</span>
-    
      <span class="deck"> Yoo, I'm a span tag too</span>
      <span class="deck"> This is a deck of spans</span>
      <span class="deck"> I like span decks</span>
 
-    <a href="#">I'm a spanner</a>
+    <a href="#">I'm a link</a>
+
+    <ul>
+<li>I am a list</li>
+<li>I am a list</li>
+    </ul>
 
     </body>
 
