--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,13 @@
 <div id="main-content">
      <p> Yo mordencje ! <strong>Contact</strong> us below.</p>
      <p>Aren't paragraph's cool?</p>
+
+     <div id="sub-content">
+         <p>More content</p>
+     </div>
 </div>
 
-<p>Aren't paragraph's cool?</p>
+<p>None contained P tag</p>
 
      <a href="http://www/google.com">Google</a>
 
