Css/syntax.css and index.html modified and articles.html added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <div id="header">
 <h1>Selectors</h1>
-<h2>In CSS</h2>
+<h2>In CSS</h2>#main-content #sub-content p {
+    color: red;
+    }
 <p>Welcome to my website!</p>
     </div>
 
