--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,13 @@
      <p> Yo mordencje ! <strong>Contact</strong> us below.</p>
      <p>Aren't paragraph's cool?</p>
 
-     <div id="sub-content">
-         <p>More content</p>
-     </div>
 </div>
 
-<p>None contained P tag</p>
+<div>
+    <p>This is the third div</p>
+</div>
 
-     <a href="http://www/google.com">Google</a>
+     
 
      <span>Yo,I'm a span tag</span>
      <span class="deck"> Yoo, I'm a span tag too</span>
@@ -34,8 +33,11 @@
      <span class="deck"> I like span decks</span>
 
     <a href="#">I'm a link</a>
+    <a href="http://www/google.com" title="Google">I am a link</a>
+    <a href="http://www/google.com" title="Search engine">I am a link</a>
 
-    <ul>
+
+    <ul id="id">
 <li>I am a list</li>
 <li>I am a list</li>
     </ul>
