line 38 and 39 added

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
      
 
      <span>Yo,I'm a span tag</span>
-     <span class="deck"> Yoo, I'm a span tag too</span>
+     <span class="deck halls"> Yoo, I'm a span tag too</span>
      <span class="deck"> This is a deck of spans</span>
      <span class="deck"> I like span decks</span>
 
