How to select particular lines

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,8 @@
     <a href="#">I'm a link</a>
     <a href="http://www/google.com" title="Google">I am a link</a>
     <a href="http://www/google.com" title="Search engine">I am a link</a>
-
+    <a href="something.pdf">pdf file</a>
+    <a href="something.pdf">pdf file</a>
 
     <ul id="id">
 <li>I am a list</li>
