--- a/articles.html
+++ b/articles.html
@@ -6,40 +6,38 @@
 </head>
 
 <body>
-<div id="header">
-    <h1>Articles</h1>
-</div>
 
-<div id="all-articles">
+    <h2>Most recent articles</h2>
 
-    <h2>Article #1</h2>
+<article>
     <p>Published by the Sosa</p>
+    <p>Cos cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-
-    <h2>Article #2</h2>
-    <p>Published by the Sosa</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-
-    <h2>Article #3</h2>
-    <p>Published by the Sosa</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos<a href="#">here</a></p>
+</article>
 
     
-</div>
+<article>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos<a href="#">here</a></p>
+</article>    
+
+    
+<article>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos</p>
+    <p>Cos cos cos cos <a href="#">here</a></p>
+</article>
+
 
 </body>
