First of type and last of type child selectors

--- a/articles.html
+++ b/articles.html
@@ -10,6 +10,7 @@
     <h2>Most recent articles</h2>
 
 <article>
+    <h2>Article title</h2>
     <p>Published by the Sosa</p>
     <p>Cos cos cos cos cos</p>
     <p>Cos cos cos cos</p>
@@ -17,26 +18,31 @@
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos<a href="#">here</a></p>
+    <hr>
 </article>
 
     
 <article>
+    <h2>Article title</h2>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos<a href="#">here</a></p>
+    <hr>
 </article>    
 
     
 <article>
+    <h2>Article title</h2>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos <a href="#">here</a></p>
+    <hr>
 </article>
 
 
