--- a/articles.html
+++ b/articles.html
@@ -7,42 +7,43 @@
 
 <body>
 
-    <h2>Most recent articles</h2>
+    <div>
+    <h1>Articles</h1>
 
 <article>
     <h2>Article title</h2>
     <p>Published by the Sosa</p>
     <p>Cos cos cos cos cos</p>
     <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos<a href="#">here</a></p>
-    <hr>
 </article>
 
+    <hr>
+    <h2>marketing message</h2>
+    <a href="#">Offers!</a>
     
 <article>
-    <h2>Article title</h2>
+    <h2>Title</h2>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos<a href="#">here</a></p>
-    <hr>
 </article>    
 
+<hr>
     
 <article>
     <h2>Article title</h2>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
+</article>
+
+<hr>
+
+<article>
+    <h2>Article title</h2>
     <p>Cos cos cos cos</p>
     <p>Cos cos cos cos</p>
-    <p>Cos cos cos cos <a href="#">here</a></p>
-    <hr>
+    <p>Cos cos cos cos</p>
 </article>
 
 
