--- a/articles.html
+++ b/articles.html
@@ -8,25 +8,26 @@
 
 <body>
 
-   <div>
-       <article class="featured-content">
-           <p>dummy text</p>
-       </article>
+   <h1>I am heading</h1>
 
-       <article>
-           <p>dummy text</p>
-       </article>
+   <article>
+       <p>Blah blah blah</p>
+       <p>Blah blah blah <a href="#">link</a></p>
+   </article>
 
-       <div class="featured-content">
-           <img src="#">
-       </div>
+<ul>
+    <li>List item</li>
+    <li>List item</li>
+</ul>
 
-       <div>
-           <img src="#">
-       </div>
-       
-   </div>
+<h2>New section</h2>
 
+<p>blah blah blah</p>
+<p>blah blah blah</p>
+<p>blah blah blah</p>
+<p>Getting tired of writing blah blah blah</p>
+<p>Jestem ogrem</p>
 
 </body>
+
 </html>
