Relative font sizes

--- a/articles.html
+++ b/articles.html
@@ -8,25 +8,23 @@
 
 <body>
 
-   <h1>I am heading</h1>
+   <h1>Most recent articles</h1>
 
    <article>
-       <p>Blah blah blah</p>
-       <p>Blah blah blah <a href="#">link</a></p>
+       <h2>Article title</h2>
+       <p>Blah blah blahcyk cyk cyk purrrrrr Blah blah blahcyk cyk cyk purrrrrr</p>
+       <p>Blah blah blahcyk cyk cyk purrrrrr Blah blah blahcyk cyk cyk purrrrrr</p>
+       <p>To read more click <a href="#">link</a></p>
+       <hr>
    </article>
 
-<ul>
-    <li>List item</li>
-    <li>List item</li>
-</ul>
-
-<h2>New section</h2>
-
-<p>blah blah blah</p>
-<p>blah blah blah</p>
-<p>blah blah blah</p>
-<p>Getting tired of writing blah blah blah</p>
-<p>Jestem ogrem</p>
+    <article>
+    <h2>Article 2 title</h2>
+    <p>Blah blah blahcyk cyk cyk purrrrrr Blah blah blahcyk cyk cyk purrrrrr</p>
+    <p>Blah blah blahcyk cyk cyk purrrrrr Blah blah blahcyk cyk cyk purrrrrr</p>
+    <p>To read more click <a href="#">here</a></p>
+    <hr>
+</article>
 
 </body>
 
