--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     
 
     <div id="header">
-<h1>Selectors</h1>
-<h2>In CSS</h2>#main-content #sub-content p {
-    color: red;
-    }
-<p>Welcome to my website!</p>
+        <h1>Selectors</h1>
+        <h2>In CSS</h2> 
+        <p>Welcome to my website!</p>
+
     </div>
 
+    <p style="color: red;">Elo mordencje</p>
+    <p>Elo mordencje</p>
+    <p>Elo mordencje</p>
+    <p>Elo mordencje</p>
     <p>Elo mordencje</p>
     <p>Elo mordencje</p>
     <p>Elo mordencje</p>
