Letter Spacing & Line height

--- a/index.html
+++ b/index.html
@@ -3,33 +3,49 @@
 <head>
 <title>CSS For Beginners</title>
 <link rel="stylesheet" type="text/css" href="css/syntax.css">
+
+<style>
+body{
+    background: rgb(60, 125, 209);
+}
+
+#main-content{
+    background: rgb(182, 49, 49);
+    width: 900px;
+    margin: 0 auto;
+    height: 100%;
+    padding: 20px;
+}
+
+</style>
+
 </head>
+
 
 <body>
 
-    <p class="welcome">Welcome!</p>
-    
+    <div id="main-content">
 
-    <div id="header">
-        <h1>Selectors</h1>
-        <h2>In CSS</h2> 
-        <p>Welcome to my website!</p>
+        <h1>CSS For Begineers</h1>
+
+        <p>Pierwszą ważną zasadą oddania celnego strzału jest postawa strzelecka.
+            Jeśli będziemy stać niestabilnie to szybko sie zmęczymy i przestaniemy być celni,
+            nie mówiąc już o czasie celowania. Zasady celowania są ważne by oddać celny strzał. 
+            Jest ich kilka.
+        </p>
+
+        <p>Pierwszą zasadą celnego strzału jest, jak już wspomniałem, postawa. Należy stać stabilnie. Lekko ugiąć nogi i 
+            pochylić się do przodu. Drugą zasadą jest chwyt. Należy trzymać mocno i pewnie. Kolejną zasadą są punkty podparcia broni. 
+            Ramie, łokieć i policzek. Kolejna zasada to zgranie przyrządów celowniczych. Patrzymy przez przyrządy umieszczając muszkę na środku przyrządów.
+            Ostrość wzroku skupiamy na muszce. 
+        </p>
+
+        <p>Zasady oddania celnego strzału nie są skomplikowane i łatwo jest sie ich nauczyć
+            Zapraszam chętnych do wzięcia udziału w naszych kursach
+        </p>
 
     </div>
+    </body>
 
-    <a href="#">This is a link</a>
-    <a href="#">This is a link</a>
-    <a href="#">This is a link</a>
-
-    <p style="color: red;">Elo mordencje</p>
-    <p>Elo mordencje</p>
-    <p>Elo mordencje</p>
-    <p>Elo mordencje</p>
-    <p>Elo mordencje</p>
-    <p>Elo mordencje</p>
-    <p>Elo mordencje</p>
-    <p>Elo mordencje</p>
-
-</body>
 
 </html>
