Padding and Margin long-hand

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@ body{
             Ostrość wzroku skupiamy na muszce. 
         </p>
     </div>
-    
+    <div class="box small">
         <p>Zasady oddania celnego strzału nie są skomplikowane i łatwo jest sie ich nauczyć
             Zapraszam chętnych do wzięcia udziału w naszych kursach
         </p>
-
+    </div>
+    
     </div>
     </body>
 
