--- a/index.html
+++ b/index.html
@@ -28,28 +28,17 @@ body{
 
         <h1>CSS For Begineers</h1>
 
-    <div class="box">
-        <p>Pierwszą ważną zasadą oddania celnego strzału jest postawa strzelecka.
-            Jeśli będziemy stać niestabilnie to szybko sie zmęczymy i przestaniemy być celni,
-            nie mówiąc już o czasie celowania. Zasady celowania są ważne by oddać celny strzał. 
-            Jest ich kilka.
-        </p>
-    </div>
+    <div class="box dashed">dashed</div>
+    <div class="box dotted">dotted</div>
+    <div class="box double">double</div>
+    <div class="box groove">groove</div>
+    <div class="box inset">inset</div>
+    <div class="box outset">outset</div>
+    <div class="box ridge">ridge</div>
+    <div class="box solid">solid</div>
 
-    <div class="box">
-        <p>Pierwszą zasadą celnego strzału jest, jak już wspomniałem, postawa. Należy stać stabilnie. Lekko ugiąć nogi i 
-            pochylić się do przodu. Drugą zasadą jest chwyt. Należy trzymać mocno i pewnie. Kolejną zasadą są punkty podparcia broni. 
-            Ramie, łokieć i policzek. Kolejna zasada to zgranie przyrządów celowniczych. Patrzymy przez przyrządy umieszczając muszkę na środku przyrządów.
-            Ostrość wzroku skupiamy na muszce. 
-        </p>
-    </div>
-    <div class="box small">
-        <p>Zasady oddania celnego strzału nie są skomplikowane i łatwo jest sie ich nauczyć
-            Zapraszam chętnych do wzięcia udziału w naszych kursach
-        </p>
     </div>
     
-    </div>
     </body>
 
 
