Width and Height

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ body{
 
 #main-content{
     background: rgb(182, 49, 49);
-    width: 900px;
+    width: 80%;
     margin: 0 auto;
-    height: 100%;
-    padding: 20px;
+    height: 100%;  /* szerokość i wysokość podana w procentach */
+    padding: 2%;   /*  spowoduje, że zawartość dostosuje się do wielkości ekranu, dobre dla urządzeń mobilnych*/ 
 }
 
 </style>
@@ -27,24 +27,10 @@ body{
     <div id="main-content">
 
         <h1>CSS For Begineers</h1>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
-    <a href="#">link</a>
+    <div class="static-width">Pixel Width</div>
+    <div class="percentage-width">Percentage Width</div>
+    <div class="inline-block">inline block</div>
+    <div class="inline-block">inline block</div>
   
 
     </div>
