--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@ body{
 
     <div id="main-content">
 
-        <h1>CSS For Begineers</h1>
-    <div id="banner">banner</div>
-    
-  
+        <div id="circle">Hello</div>
+        <div id="circle-2">Hello</div>
+        <div id="circle-3">Hello</div>
 
     </div>
+
     
-    </body>
+</body>
 
 
 </html>
