--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@ body{
 }
 
 #main-content{
-    background: #fff);
+    background: rgb(143, 82, 82);
     width: 80%;
     margin: 0 auto;
     height: 100%;  /* szerokość i wysokość podana w procentach */
     padding: 2%;   /*  spowoduje, że zawartość dostosuje się do wielkości ekranu, dobre dla urządzeń mobilnych*/ 
+    position: relative;
+    min-height: 700px;
 }
 
 </style>
